--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,18 @@
-<html lang="en">
+<html lang = "en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit Card Default Prediction</title>
 
 
     <!-- BootStrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity = "sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 
     <!-- css -->
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel = "stylesheet" href = "static/css/styles.css">
 
 
 </head>
@@ -20,10 +20,10 @@
 <body>
 
     <!-- As a heading -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Credit Card Default Prediction</a>
+    <nav class = "navbar navbar-inverse navbar-fixed-top">
+        <div class = "container-fluid">
+            <div class = "navbar-header">
+                <a class = "navbar-brand" href = "/">Credit Card Default Prediction</a>
             </div>
         </div>
     </nav>
@@ -31,171 +31,184 @@
     <br>
 
 
-    <div class="container">
+    <div class = "container">
 
         <h3>{{ prediction_text }}</h3>
         <br>
 
-        <form action="\predict" method="post">
+        <form action = "\predict" method = "post">
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+            <div class = "row">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Account Number</h5>
-                            <input name="acc_no" type="number ">
+                            <input name = "acc_no" type = "number ">
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Credit Limit</h5>
-                            <input name="limit_bal" type="number ">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- Source -->
-                            <h5>Gender</h5>
-                            <select name="sex" required="required">
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
+                            <input name = "limit_bal" type = "number ">
                         </div>
                     </div>
                 </div>
             </div>
-            <br>
 
-            <div class = 'row'>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+            <div class = "row">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
+                            <h5 class = "card-title">Gender</h5>
+                            <select name = "sex" required = "required">
+                                <option value = "male">Male</option>
+                                <option value = "female">Female</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Age</h5>
-                            <input name="age" type="number ">
+                            <input name = "age" type = "number ">
                         </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-body">
-                        <h5>Education</h5>
-                        <select name="education" required="required">
-                            <option value="middle_school">Middle School Graduate</option>
-                            <option value="high_school">High School Graduate</option>
-                            <option value="ug">College UG</option>
-                            <option value="pg">College PG</option>
-                            <option value="phd">PHD</option>
-                            <option value="others">Others</option>
-                            <option value="uneducated">Uneducated</option>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-body">
-                        <h5>Marriage</h5>
-                        <select name="marriage" required="required">
-                            <option value="married">Married</option>
-                            <option value="unmarried">Unmarried</option>
-                            <option value="divorced">Divorced</option>
-                            <option value="widowed">Widowed</option>
                     </div>
                 </div>
             </div>
 
-            <br>
-
-            <div class = 'row'>
-
-                <div class="card-body">
-                    <h5>Payment History</h5>
-                    <select name="payment_history" required="required">
-                        <option value="on_time">Paid on-time</option>
-                        <option value="advance_one">One month paid in advance</option>
-                        <option value="advance_two">Two months paid in advance</option>
-                        <option value="delay_one">One month delay</option>
-                        <option value="delay_two">Two months delay</option>
-                        <option value="delay_three">Three months delay</option>
-                        <option value="delay_four">Four months delay</option>
-                        <option value="delay_five">Five months delay</option>
-                        <option value="delay_six">Six months delay</option>
-                        <option value="delay_seven">Seven months delay</option>
-
-                </div>
-                
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5>Average Bill Amount in the past</h5>
-                            <input name="average_bill" type="number ">
+            <div class = "row">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
+                            <h5 class = "card-title">Education</h5>
+                            <select name = "education" required = "required">
+                                <option value = "middle_school">Middle School Graduate</option>
+                                <option value = "high_school">High School Graduate</option>
+                                <option value = "ug">College UG</option>
+                                <option value = "pg">College PG</option>
+                                <option value = "phd">PHD</option>
+                                <option value = "others">Others</option>
+                                <option value = "uneducated">Uneducated</option>
+                            </select>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
+                            <h5 class = "card-title">Marriage</h5>
+                            <select name = "marriage" required = "required">
+                                <option value = "married">Married</option>
+                                <option value = "unmarried">Unmarried</option>
+                                <option value = "divorced">Divorced</option>
+                                <option value = "widowed">Widowed</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class = 'row'>
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
+                            <h5 class = "card-title">Payment History</h5>
+                            <select name = "payment_history" required = "required">
+                                <option value = "on_time">Paid on-time</option>
+                                <option value = "advance_one">One month paid in advance</option>
+                                <option value = "advance_two">Two months paid in advance</option>
+                                <option value = "delay_one">One month delay</option>
+                                <option value = "delay_two">Two months delay</option>
+                                <option value = "delay_three">Three months delay</option>
+                                <option value = "delay_four">Four months delay</option>
+                                <option value = "delay_five">Five months delay</option>
+                                <option value = "delay_six">Six months delay</option>
+                                <option value = "delay_seven">Seven months delay</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
+                            <h5>Pending Bill Amount</h5>
+                            <input name = "average_bill" type = "number ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "row">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Amount paid in Jan</h5>
-                            <input name="jan_payment" type="number ">
+                            <input name = "jan_payment" type = "number ">
                         </div>
                     </div>
                 </div>
-            </div>
-            <br>
 
-            <div class = 'row'>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Amount paid in Feb</h5>
-                            <input name="feb_payment" type="number ">
+                            <input name = "feb_payment" type = "number ">
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+            <div class = "row">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Amount paid in March</h5>
-                            <input name="march_payment" type="number ">
+                            <input name = "march_payment" type = "number ">
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Amount paid in April</h5>
-                            <input name="april_payment" type="number ">
+                            <input name = "april_payment" type = "number ">
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class = 'row'>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Amount paid in May</h5>
-                            <input name="may_payment" type="number ">
+                            <input name = "may_payment" type = "number ">
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
+                <div class = "col-sm-6">
+                    <div class = "card">
+                        <div class = "card-body">
                             <h5>Amount paid in June</h5>
-                            <input name="june_payment" type="number ">
+                            <input name = "june_payment" type = "number ">
                         </div>
                     </div>
                 </div>
             </div>
+
+            <br>
 
             <!-- Submit -->
-            <input type="submit" value="Submit" class="btn btn-secondary">
+            <input type = "submit" value = "Submit" class = "btn btn-secondary">
         </form>
         <br>
         <p>©2022 Shankesh Raju MS</p>
